--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 #
 # Note: if you want to stage/commit WP core files
 # you can delete this whole section/until Configuration.
+.idea
 /wp-admin/
 /wp-content/index.php
 /wp-content/languages
